--- a/src/assets/styles/components/hashtag-search.css
+++ b/src/assets/styles/components/hashtag-search.css
@@ -10,5 +10,5 @@
   right: 0;
   height: 5rem;
   border-bottom: 1px solid #EDEDED;
-  z-index: 300;
+  z-index: 200;
 }
